@@ -191,3 +191,22 @@ Parent.detach()
   Parent.willHide()
 Child.detach()
 
+Running: testShowDetachesFromPrevious
+Parent1()
+Parent2()
+Child()
+Parent1.show()
+  Parent1.wasShown()
+  Parent1.onResize()
+Parent2.show()
+  Parent2.wasShown()
+  Parent2.onResize()
+Child.show()
+  Child.wasShown()
+  Child.onResize()
+Child.show()
+Child.detach()
+  Child.willHide()
+  Child.wasShown()
+  Child.onResize()
+
