@@ -1,3 +1,12 @@
+2012-11-21  Pavel Feldman  <pfeldman@chromium.org>
+
+        Web Inspector: reparenting view does not detach from the previous parent.
+        https://bugs.webkit.org/show_bug.cgi?id=102902
+
+        Reviewed by Vsevolod Vlasov.
+
+        * inspector/view-events.html:
+
 2012-11-21  Csaba Osztrogonác  <ossy@webkit.org>
 
         [Qt] Unreviewed gardening, unskip now passing tests.
